{
  "version": 4,
  "terraform_version": "0.14.6",
  "serial": 44,
  "lineage": "f7e3ee16-aec5-0d76-55a5-9d118fe19edc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-096bfafd808f337c5",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-94-41-181.compute-1.amazonaws.com",
            "public_ip": "3.94.41.181",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tayo-Eip"
            },
            "tags_all": {
              "Name": "tayo-Eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2b8ca1dad447f8a",
            "arn": "arn:aws:ec2:us-east-1:324108852401:instance/i-0c2b1f3cada1db445",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c2b1f3cada1db445",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "taas-kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06e5f3d2fad289ffc",
            "private_dns": "ip-10-0-2-230.ec2.internal",
            "private_ip": "10.0.2.230",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f926dce1407aa41a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00c01e2857e650890",
            "tags": {
              "Name": "tayo-server1"
            },
            "tags_all": {
              "Name": "tayo-server1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0459481322854d218"
            ]
          },
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_security_group.private-sg",
            "aws_subnet.privatesubnet1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2b8ca1dad447f8a",
            "arn": "arn:aws:ec2:us-east-1:324108852401:instance/i-0bbf7a8859fe3149a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bbf7a8859fe3149a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "taas-kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03539cc8311e67418",
            "private_dns": "ip-10-0-3-133.ec2.internal",
            "private_ip": "10.0.3.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fafeb8d72d04ae76",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-060fbd1e07b39ca5f",
            "tags": {
              "Name": "tayo-server2"
            },
            "tags_all": {
              "Name": "tayo-server2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0459481322854d218"
            ]
          },
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_security_group.private-sg",
            "aws_subnet.privatesubnet2",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324108852401:internet-gateway/igw-09721ebd56def13b6",
            "id": "igw-09721ebd56def13b6",
            "owner_id": "324108852401",
            "tags": {
              "Name": "tayo-IGW"
            },
            "tags_all": {
              "Name": "tayo-IGW"
            },
            "vpc_id": "vpc-08850fbc7d5571a5e"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:324108852401:loadbalancer/app/App-loadbalancer/80a9d1adb766e8c6",
            "arn_suffix": "app/App-loadbalancer/80a9d1adb766e8c6",
            "dns_name": "App-loadbalancer-2092665057.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:324108852401:loadbalancer/app/App-loadbalancer/80a9d1adb766e8c6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "App-loadbalancer",
            "security_groups": [
              "sg-06719e2509050354a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09d2d195a2e4f4cc8"
              },
              {
                "subnet_id": "subnet-0c344ea83d6615c2a"
              }
            ],
            "subnets": [
              "subnet-09d2d195a2e4f4cc8",
              "subnet-0c344ea83d6615c2a"
            ],
            "tags": {
              "Name": "tayo-App-lb"
            },
            "tags_all": {
              "Name": "tayo-App-lb"
            },
            "vpc_id": "vpc-08850fbc7d5571a5e",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_subnet.publicsubnet1",
            "aws_subnet.publicsubnet2",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:324108852401:listener/app/App-loadbalancer/80a9d1adb766e8c6/e3f3f243f14e60f4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:324108852401:targetgroup/server-lb-tg/4693cec702dd5955",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:324108852401:listener/app/App-loadbalancer/80a9d1adb766e8c6/e3f3f243f14e60f4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:324108852401:loadbalancer/app/App-loadbalancer/80a9d1adb766e8c6",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app-lb",
            "aws_lb_target_group.lb-tg",
            "aws_security_group.lb-sg",
            "aws_subnet.publicsubnet1",
            "aws_subnet.publicsubnet2",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:324108852401:targetgroup/server-lb-tg/4693cec702dd5955",
            "arn_suffix": "targetgroup/server-lb-tg/4693cec702dd5955",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:324108852401:targetgroup/server-lb-tg/4693cec702dd5955",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "server-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08850fbc7d5571a5e"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Natgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-096bfafd808f337c5",
            "connectivity_type": "public",
            "id": "nat-07fae6114ea8e3300",
            "network_interface_id": "eni-01e98d3808086bdd7",
            "private_ip": "10.0.0.194",
            "public_ip": "3.94.41.181",
            "subnet_id": "subnet-09d2d195a2e4f4cc8",
            "tags": {
              "Name": "tayo-Nat-gateway"
            },
            "tags_all": {
              "Name": "tayo-Nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_internet_gateway.gw",
            "aws_subnet.publicsubnet1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324108852401:security-group/sg-06719e2509050354a",
            "description": "loadbalancer security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06719e2509050354a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20210818195704666300000001",
            "name_prefix": "terraform-",
            "owner_id": "324108852401",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tayo-lb-SG"
            },
            "tags_all": {
              "Name": "tayo-lb-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-08850fbc7d5571a5e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324108852401:security-group/sg-0459481322854d218",
            "description": "SG for private server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0459481322854d218",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06719e2509050354a"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06719e2509050354a"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20210818195708581100000002",
            "name_prefix": "terraform-",
            "owner_id": "324108852401",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tayo-private-SG"
            },
            "tags_all": {
              "Name": "tayo-private-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-08850fbc7d5571a5e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324108852401:subnet/subnet-00c01e2857e650890",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-00c01e2857e650890",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324108852401",
            "tags": {
              "Name": "tayo-privatesubnet1"
            },
            "tags_all": {
              "Name": "tayo-privatesubnet1"
            },
            "vpc_id": "vpc-08850fbc7d5571a5e"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324108852401:subnet/subnet-060fbd1e07b39ca5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-060fbd1e07b39ca5f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324108852401",
            "tags": {
              "Name": "tayo-privatesubnet2"
            },
            "tags_all": {
              "Name": "tayo-privatesubnet2"
            },
            "vpc_id": "vpc-08850fbc7d5571a5e"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324108852401:subnet/subnet-09d2d195a2e4f4cc8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-09d2d195a2e4f4cc8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324108852401",
            "tags": {
              "Name": "tayo-publicsubnet1"
            },
            "tags_all": {
              "Name": "tayo-publicsubnet1"
            },
            "vpc_id": "vpc-08850fbc7d5571a5e"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324108852401:subnet/subnet-0c344ea83d6615c2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0c344ea83d6615c2a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324108852401",
            "tags": {
              "Name": "tayo-publicsubnet2"
            },
            "tags_all": {
              "Name": "tayo-publicsubnet2"
            },
            "vpc_id": "vpc-08850fbc7d5571a5e"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324108852401:vpc/vpc-08850fbc7d5571a5e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a2383aa86c4fe9a1",
            "default_route_table_id": "rtb-067f7b55b86308e62",
            "default_security_group_id": "sg-0035ab548bdb4d334",
            "dhcp_options_id": "dopt-e9838693",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08850fbc7d5571a5e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-067f7b55b86308e62",
            "owner_id": "324108852401",
            "tags": {
              "Name": "tayo-vpc"
            },
            "tags_all": {
              "Name": "tayo-vpc"
            }
          }
        }
      ]
    }
  ]
}